fix slackin layout breaking

--- a/themes/vue/source/css/index.styl
+++ b/themes/vue/source/css/index.styl
@@ -258,6 +258,10 @@ html, body
 #donate
     margin-left -2px !important
 
+iframe.__slackin
+  position relative
+  z-index 10
+
 #sponsors, #sponsors-mobile
     span
         color $light
